@@ -7,7 +7,7 @@ CXXFLAGS = -Wall -g
 
 LIB_LDFLAGS = -no-undefined -version-info 2
 
-pkginclude_HEADERS = include/zookeeper.h include/recordio.h generated/zookeeper.jute.h
+pkginclude_HEADERS = include/zookeeper.h include/zookeeper_version.h include/recordio.h generated/zookeeper.jute.h
 EXTRA_DIST=LICENSE
 
 HASHTABLE_SRC = src/hashtable/hashtable_itr.h src/hashtable/hashtable_itr.c \
@@ -16,7 +16,7 @@ HASHTABLE_SRC = src/hashtable/hashtable_itr.h src/hashtable/hashtable_itr.c \
 noinst_LTLIBRARIES = libhashtable.la
 libhashtable_la_SOURCES = $(HASHTABLE_SRC)
 
-COMMON_SRC = src/zookeeper.c include/zookeeper.h \
+COMMON_SRC = src/zookeeper.c include/zookeeper.h include/zookeeper_version.h \
     src/recordio.c include/recordio.h include/proto.h \
     src/zk_adaptor.h generated/zookeeper.jute.c \
     src/zk_log.h src/zk_log.c src/zk_hashtable.h src/zk_hashtable.c
