@@ -443,15 +443,15 @@ public:
 
         CPPUNIT_ASSERT(ctxLocal->countEvents() == 0);
 
-        rc = zoo_set(zk, "/watchtest/child", "1", 1, -1, 0);
+        rc = zoo_set(zk, "/watchtest/child", "1", 1, -1);
         CPPUNIT_ASSERT_EQUAL((int)ZOK, rc);
         struct Stat stat1, stat2;
-        rc = zoo_set(zk, "/watchtest/child", "1", 1, -1, &stat1);
+        rc = zoo_set2(zk, "/watchtest/child", "1", 1, -1, &stat1);
         CPPUNIT_ASSERT_EQUAL((int)ZOK, rc);
         CPPUNIT_ASSERT(stat1.version >= 0);
-        rc = zoo_set(zk, "/watchtest/child", "1", 1, stat1.version, &stat2);
+        rc = zoo_set2(zk, "/watchtest/child", "1", 1, stat1.version, &stat2);
         CPPUNIT_ASSERT_EQUAL((int)ZOK, rc);
-        rc = zoo_set(zk, "/watchtest/child", "1", 1, stat2.version, 0);
+        rc = zoo_set(zk, "/watchtest/child", "1", 1, stat2.version);
         CPPUNIT_ASSERT_EQUAL((int)ZOK, rc);
         rc = zoo_create(zk, "/watchtest/child2", "", 0,
                         &ZOO_OPEN_ACL_UNSAFE, 0, 0, 0);
